@@ -23,6 +23,9 @@ Post-v2.9.0
        other IPv4/IPv6-based protocols whenever a reject ACL rule is hit.
      * ACL match conditions can now match on Port_Groups as well as address
        sets that are automatically generated by Port_Groups.
+   - DPDK:
+     * New 'check-dpdk' Makefile target to run a new system testsuite.
+       See Testing topic for the details.
 
 v2.9.0 - 19 Feb 2018
 --------------------
